--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "express": "^4.19.2",
         "express-handlebars": "^7.1.2",
         "stripe": "^15.8.0"
+    },
+    "engines": {
+        "node": "16.20.2"
     }
 }
